Closed
Bug 936005
Opened 12 years ago
Closed 12 years ago
Defect - Double tab!! What does it mean??!? (touchstart.preventDefault does not prevent clicks in Metro chrome)
Categories
(Core Graveyard :: Widget: WinRT, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla28
People
(Reporter: mbrubeck, Assigned: mbrubeck)
References
Details
(Whiteboard: [block28] feature=defect c=tbd u=tbd p=1)
Attachments
(1 file)
|
1.03 KB,
patch
|
jimm
:
review+
|
Details | Diff | Splinter Review |
When clicking the "new tab" overlay button on the right edge of the screen in Metro Firefox, I see two new tabs appear instead of one.
| Assignee | ||
Comment 1•12 years ago
|
||
This is reproducible only with touch, not with mouse.
NavButtonSlider.js performs its own click/drag detection. It calls preventDefault on touchstart to prevent widget clicks, but it appears to receive a click anyway.
| Assignee | ||
Comment 3•12 years ago
|
||
Actually, bug 861876 was for win32 (desktop). This is a chrome-only bug in WinRT widget. Taking this.
Assignee: nobody → mbrubeck
Status: NEW → ASSIGNED
Component: Browser → Widget: WinRT
No longer depends on: 861876
Product: Firefox for Metro → Core
QA Contact: mbrubeck
Summary: Double tab!! What does it mean??!? → Defect - Double tab!! What does it mean??!? (touchstart.preventDefault does not prevent clicks in Metro chrome)
Whiteboard: p=1
| Assignee | ||
Comment 4•12 years ago
|
||
Chrome should use the same logic as content here.
Attachment #828681 -
Flags: review?(jmathies)
Updated•12 years ago
|
Blocks: metrov1it18
Priority: -- → P2
QA Contact: mbrubeck → jbecerra
Whiteboard: p=1 → [block28] feature=defect c=tbd u=tbd p=1
Updated•12 years ago
|
Attachment #828681 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 5•12 years ago
|
||
it's so bright and vivid
https://hg.mozilla.org/integration/fx-team/rev/36fb3e83f249
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Comment 8•11 years ago
|
||
Verified as fixed with Firefox 28 beta 7 on a Dell XPS 12 ultrabook with Windows 8 64-bit.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Updated•6 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•