Bug 936005 - Allow chrome to cancel gesture recognition with preventDefault [r=jimm]